--- a/views/admin/partials/sidebar.ejs
+++ b/views/admin/partials/sidebar.ejs
@@ -7,15 +7,7 @@
   <title>Document</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   <style>
-    /* .sidebar {
-        position: fixed;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        z-index: 100;
-        padding: 48px 0 0;
-        box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
-      } */
+
 
     .sidebar-sticky {
       position: relative;
@@ -42,11 +34,7 @@
       gap: 0.5rem;
     }
 
-    /* .sidebar .nav-link.active {
-        color: #007bff;
-        background-color: #e9ecef;
-        border-radius: 0.25rem;
-      } */
+ 
 
     .sidebar .nav-link:hover {
       background-color: #f8f9fa;
@@ -104,25 +92,29 @@
                 Products
               </a>
             </li>
+
             <li class="nav-item">
               <a class="nav-link" href="/admin/users">
                 <i class="fas fa-users"></i>
                 Users
               </a>
             </li>
+
             <li class="nav-item">
               <a class="nav-link" href="/admin/category">
                 <i class="fas fa-tags"></i>
                 Categories
               </a>
             </li>
+
             <li class="nav-item">
               <a class="nav-link" href="/admin/orders">
                 <i class="fas fa-box"></i>
                 Orders
               </a>
-            </li class=nav-item>
-            <li class="nav-link">
+            </li>
+
+            <li class="nav-item">
               <a href="/admin/coupons" class="nav-link">
                 <i class="fas fa-tags"></i>
                 coupons
@@ -138,7 +130,7 @@
               </a>
             </li>
             
-            <li class="nav-link">
+            <li class="nav-item">
               <a href="/admin/salesReport" class="nav-link">
                 <i class="fas fa-tags"></i>
                 sales Report
