--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -113,7 +113,29 @@
           </div>
         </div>
       </div>
+
+    <div class="d-flex justify-content-center mt-3">
+      <% if (currentPage > 1) { %>
+        <a href="?page=<%= currentPage - 1 %>&limit=10" class="btn btn-secondary mx-1">&lt; Prev</a>
+      <% } %>
+    
+      <% for (let i = 1; i <= totalPages; i++) { %>
+        <a 
+          href="?page=<%= i %>&limit=10" 
+          class="btn <%= i === currentPage ? 'btn-primary' : 'btn-secondary' %> mx-1"
+        >
+          <%= i %>
+        </a>
+      <% } %>
+    
+      <% if (currentPage < totalPages) { %>
+        <a href="?page=<%= currentPage + 1 %>&limit=10" class="btn btn-secondary mx-1">Next &gt;</a>
+      <% } %>
     </div>
+  </div>
+    
+
+
     <script>
       document.getElementById('addCategoryForm').addEventListener('submit', async function(event) {
         event.preventDefault(); // Prevent default form submission
