--- a/views/admin/couponManagement.ejs
+++ b/views/admin/couponManagement.ejs
@@ -125,6 +125,27 @@
         </div>
       </div>
     </div>
+
+    
+ 
+  <div class="d-flex justify-content-center mt-3">
+    <% if (currentPage > 1) { %>
+      <a href="?page=<%= currentPage - 1 %>&limit=10" class="btn btn-secondary mx-1">&lt; Prev</a>
+    <% } %>
+  
+    <% for (let i = 1; i <= totalPages; i++) { %>
+      <a 
+        href="?page=<%= i %>&limit=10" 
+        class="btn <%= i === currentPage ? 'btn-primary' : 'btn-secondary' %> mx-1"
+      >
+        <%= i %>
+      </a>
+    <% } %>
+  
+    <% if (currentPage < totalPages) { %>
+      <a href="?page=<%= currentPage + 1 %>&limit=10" class="btn btn-secondary mx-1">Next &gt;</a>
+    <% } %>
+
   </div>
 
   <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
@@ -183,6 +204,7 @@
         </div>
       </div>
     </div>
+    
   </div>
 
 
