--- a/views/users/address.ejs
+++ b/views/users/address.ejs
@@ -12,6 +12,14 @@
 <%-include("partials/header") %>
 
 <div class="container mt-5">
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="/">Home</a></li>
+      <li class="breadcrumb-item"><a href="/users/profile">profile</a></li>
+      <li class="breadcrumb-item"><a href="/users/address">address</a></li>
+      
+    </ol>
+  </nav>
   <div class="row">
     <!-- Sidebar -->
     <div class="col-md-3">
