--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -14,6 +14,32 @@
     </div>
 </section>
 
+
+<!-- New Arrivals Section -->
+<section class="new-arrivals">
+    <h3>New Arrivals</h3>
+    <div class="product-grid">
+        <% products.forEach(product => { %>
+            <a href="/users/productDetails/<%= product._id %>" class="product-card">
+                <img src="/<%= product.images[0] %>" alt="<%= product.name %>">
+                <div class="product-card-body">
+                    <h4 class="product-card-title"><%= product.name %></h4>
+                    <p class="product-card-price">
+                        <% if (product.offerDiscount) { %>
+                            <s class="text-muted">₹ <%= product.price.toFixed(2) %></s>
+                            ₹ <%= product.offerDiscount.toFixed(2) %>
+                            <% } else { %>
+                            ₹ <%= product.price.toFixed(2) %>
+                            <% } %>
+                    </p>
+                    <button class="product-card-btn">View Details</button>
+                </div>
+            </a>
+        <% }); %>
+    </div>
+</section>
+
+
 <!-- Community Section -->
 <section class="community-section position-relative">
     <img src="/assets/images/community.avif" alt="Community" class="community-background img-fluid w-100">
@@ -26,21 +52,5 @@
     </div>
 </section>
 
-<!-- New Arrivals Section -->
-<section class="new-arrivals">
-    <h3>New Arrivals</h3>
-    <div class="product-grid">
-        <% products.forEach(product => { %>
-            <a href="/users/productDetails/<%= product._id %>" class="product-card">
-                <img src="/<%= product.images[0] %>" alt="<%= product.name %>">
-                <div class="product-card-body">
-                    <h4 class="product-card-title"><%= product.name %></h4>
-                    <p class="product-card-price">₹<%= product.price.toFixed(2) %></p>
-                    <button class="product-card-btn">View Details</button>
-                </div>
-            </a>
-        <% }); %>
-    </div>
-</section>
 
 <%-include("partials/footer") %>
