--- a/views/users/partials/header.ejs
+++ b/views/users/partials/header.ejs
@@ -35,12 +35,12 @@
                         <a class="nav-link" href="/users/about">About</a>
                     </li>
                 </ul>
-                <form class="d-flex">
-                    <form method="GET" action="/users/shop" class="search-form">
-                        <input type="text"  class="form-control rounded" name="search" placeholder="Search for products..." value="<%= locals.search %>" aria-label="Search"/>
+                <% if(locals.shopPage){ %>
+                <div class="d-flex">
+                        <input type="text" id="search-input"  class="form-control rounded" name="search" placeholder="Search for products..." value="<%= locals.search %>" aria-label="Search"/>
                         <button type="submit">Search</button>
-                      </form>
-                </form>
+                    </div>
+                <% }%>
                 <div class="d-flex ms-3">
                     <a href="/users/wishlist" class="btn btn-outline-dark me-2">
                         <i class="fas fa-heart"></i>
