--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -1,5 +1,12 @@
 <%-include("partials/header") %>
 <div class="container mt-5">
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="/">Home</a></li>
+      <li class="breadcrumb-item"><a href="/users/profile">profile</a></li>
+      
+    </ol>
+  </nav>
   <div class="row">
     <!-- Sidebar -->
     <div class="col-md-3">
